--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://renansm93.github.io/React_Portfolio/",
   "dependencies": {
     "@csstools/normalize.css": "^12.0.0",
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/comforter": "^4.5.5",
@@ -16,6 +17,7 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
     "ansi-html": "^0.0.9",
+    "emailjs": "^4.0.2",
     "nth-check": "^2.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -24,6 +26,7 @@
     "react-simple-typewriter": "^3.0.1",
     "sanitize.css": "^13.0.0",
     "serialize-javascript": "^6.0.1",
+    "useref": "^1.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
